# roms-deduper

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  config.md  installation.md  quick-start.md  technology.md  testing.md
rom_deduper/: __init__.py  actions.py  cli.py  config.py  grouper.py  parser.py  ranker.py  scanner.py
tests/: __init__.py  conftest.py  test_actions.py  test_config.py  test_grouper.py  test_integration.py  test_parser.py  test_ranker.py  test_scanner.py
