[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rom-deduper"
version = "0.1.0"
description = "Find and remove duplicate ROM files with preference for USA and English versions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "send2trash>=1.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "pyright>=1.1.0",
]

[project.scripts]
rom-deduper = "rom_deduper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rom_deduper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["rom_deduper"]
omit = ["tests/*", "rom_deduper/__main__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["rom_deduper", "tests"]
exclude = [".venv", ".git"]
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
